Update frontend code and fix styling issues
Prevented the project list panel and project task container from
stretching when new projects and tasks are dynamically created.
Implemented scrolling to view all projects and tasks when the container
element is overflowing. Removed the project close button for better
design. Implemented new functions to prevent creation of projects and
tasks with the same name.

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -22,6 +22,7 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
+    min-height: 0;
     padding: 1rem;
 }
 
@@ -37,7 +38,25 @@ body {
     width: 100%;
     flex: 1;
     display: flex;
+    min-height: 0;
 }
+
+#left-panel {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    min-height: 0;
+    background-color: white;
+    border: 2px solid rgb(0, 97, 92);
+    gap: 10px;
+}
+
+.panel-container {
+    flex: 1;
+    overflow-y: auto;
+    min-height: 0;
+}
+
 
 .panel-heading {
     text-align: center;
@@ -47,21 +66,9 @@ body {
     padding: 0.5rem;
 }
 
-.panel-container {
-    flex: 1;
-}
-
 .button-box {
     display: flex;
     justify-content: center;
-}
-
-#left-panel {
-    flex: 1;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    border: 2px solid rgb(0, 97, 92);
 }
 
 #right-panel {
@@ -70,9 +77,10 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-width: 2px 2px 2px 0;
+    background-color: rgba(0, 97, 92, 0.15);
+    /*border-width: 2px 2px 2px 0;
     border-color: rgb(0, 97, 92);
-    border-style: solid;
+    border-style: solid;*/
 }
 
 footer {
